# recipe-knowledge-graph

./: .env.example  .gitignore  CLAUDE.md  KNOWLEDGE_GRAPH_GUIDE.md  LICENSE  PLANNING.md  PRD.md  README.md  TASK.md  cli.py  pyproject.toml  pytest.ini
agent/: __init__.py  agent.py  api.py  db_utils.py  graph_utils.py  models.py  prompts.py  providers.py  tools.py
documents/: .gitkeep
frontend/: api_client.py  app.py  components.py  config.py  styles.py
frontend/.streamlit/: config.toml
ingestion/: __init__.py  chunker.py  embedder.py  graph_builder.py  ingest.py
recipe_docs/: american_buttermilk_fried_chicken.md  american_clam_chowder.md  american_mac_and_cheese.md  american_pulled_pork_sandwiches.md  american_smoked_brisket.md  chinese_char_siu_pork.md  chinese_dan_dan_noodles.md  chinese_hot_and_sour_soup.md  chinese_kung_pao_chicken.md  chinese_mapo_tofu.md  italian_carbonara.md  italian_eggplant_parmigiana.md  italian_margherita_pizza.md  italian_osso_buco.md  italian_risotto_milanese.md  mexican_carnitas.md  mexican_chicken_enchiladas.md  mexican_chiles_rellenos.md  mexican_pozole_rojo.md  mexican_street_corn_salad.md
sql/: schema.sql
tests/: __init__.py  conftest.py
tests/agent/: test_agent.py  test_tools.py
tests/ingestion/: test_chunker.py  test_embedder.py
